@@ -1,3 +1,11 @@
+2006-10-16  Jeremy Katz  <katzj@redhat.com>
+
+	* pykickstart.spec, setup.py: Bump version.
+
+	* pykickstart/parser.py (KickstartHandlers.doKey): Support for
+	installation key
+	* pykickstart/data.py (KickstartData.__init__): Likewise.
+
 2006-10-13  Bill Nottingham  <notting@redhat.com>
 
 	* af.po, am.po, ar.po, be.po, bg.po, bn.po, cy.po, et.po,
